--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,4 @@
 @import "./utils/variables.scss";
 @import "./layout/body.scss";
 @import "./layout/header.scss";
-@import "./layout/footer";
+@import "./layout/footer.scss";
