--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,7 @@ a:hover {
 
 h1 {
   font-family: "Roboto-bold";
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .container {
@@ -54,72 +54,80 @@ body {
   height: 620px;
 }
 .headSection__text {
-  height: 300px;
-  width: 1060px;
+  height: 220px;
+  width: 775px;
   position: relative;
   top: 250px;
   background-color: #56b093;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-left: 170px;
   padding-left: 50px;
 }
 .headSection__text p {
   width: 420px;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .columns {
-  margin-top: 115px;
+  margin-top: 90px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+}
+.columns__firstColumn {
+  margin-right: 45px;
 }
 .columns__firstColumn > img {
   object-fit: cover;
-  width: 620px;
-  height: 675px;
+  width: 380px;
+  height: 490px;
 }
 .columns__firstColumn .text {
-  margin-top: 110px;
+  margin-top: 60px;
 }
 .columns__firstColumn .line {
   display: flex;
 }
 .columns__firstColumn .line .number {
   font-family: "Roboto-Black";
-  font-size: 7rem;
+  font-size: 5rem;
   margin: 0;
   margin-right: 15px;
 }
 .columns__firstColumn .line .info p {
-  font-size: 1.2rem;
+  font-size: 1rem;
   position: relative;
-  top: 50%;
+  top: 40%;
   font-family: "Roboto-Bold";
   margin: 0;
 }
 .columns__secondColumn {
-  width: 550px;
+  width: 450px;
+  margin-left: 45px;
+  margin-top: 40px;
 }
 .columns__secondColumn p {
   font-family: "Roboto-thin";
-  font-size: 1.3rem;
-  line-height: 2rem;
+  font-size: 1rem;
+  line-height: 1.6rem;
   margin-block-end: 0;
+  margin-block-start: 0;
   margin-bottom: 60px;
 }
 
 .contactline {
   font-family: "Roboto-black";
-  font-size: 1.9rem;
-  width: 100%;
-  margin-top: 220px;
-  margin-bottom: 160px;
+  font-size: 1.4rem;
+  width: 1000px;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 120px;
 }
 
 header {
   width: 100%;
-  margin-bottom: 60px;
+  margin-bottom: 45px;
   margin-top: 20px;
 }
 header .container {
@@ -180,7 +188,7 @@ footer .container {
   list-style: none;
   padding: 0;
   margin: 0;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .contacts__socials {
   display: flex;
