--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -17,7 +17,7 @@ a {
 
 h1 {
   font-family: "Roboto-bold";
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .container {
@@ -37,48 +37,50 @@ body {
   background-size: cover;
   height: 620px;
   &__text {
-    height: 300px;
-    width: 1060px;
+    height: 220px;
+    width: 775px;
     position: relative;
     top: 250px;
     background-color: $colour-primary;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-left: 170px;
     padding-left: 50px;
     p {
       width: 420px;
-      font-size: 1.2rem;
+      font-size: 1rem;
     }
   }
 }
 
 .columns {
-  margin-top: 115px;
+  margin-top: 90px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   &__firstColumn {
+    margin-right: 45px;
     > img {
       object-fit: cover;
-      width: 620px;
-      height: 675px;
+      width: 380px;
+      height: 490px;
     }
     .text {
-      margin-top: 110px;
+      margin-top: 60px;
     }
     .line {
       display: flex;
       .number {
         font-family: "Roboto-Black";
-        font-size: 7rem;
+        font-size: 5rem;
         margin: 0;
         margin-right: 15px;
       }
       .info {
         p {
-          font-size: 1.2rem;
+          font-size: 1rem;
           position: relative;
-          top: 50%;
+          top: 40%;
           font-family: "Roboto-Bold";
           margin: 0;
         }
@@ -86,20 +88,24 @@ body {
     }
   }
   &__secondColumn {
-    width: 550px;
+    width: 450px;
+    margin-left: 45px;
+    margin-top: 40px;
     p {
       font-family: "Roboto-thin";
-      font-size: 1.3rem;
-      line-height: 2rem;
+      font-size: 1rem;
+      line-height: 1.6rem;
       margin-block-end: 0;
+      margin-block-start: 0;
       margin-bottom: 60px;
     }
   }
 }
 .contactline {
   font-family: "Roboto-black";
-  font-size: 1.9rem;
-  width: 100%;
-  margin-top: 220px;
-  margin-bottom: 160px;
+  font-size: 1.4rem;
+  width: 1000px;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 120px;
 }
