--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -22,6 +22,7 @@ h1 {
 
 .container {
   width: 1440px;
+  border: black solid 1px;
   margin: auto;
   padding-left: 80px;
   padding-right: 80px;
@@ -103,8 +104,8 @@ body {
 }
 .contactline {
   font-family: "Roboto-black";
-  font-size: 1.4rem;
-  width: 1000px;
+  font-size: 1.2rem;
+  width: 900px;
   margin: auto;
   margin-top: 100px;
   margin-bottom: 120px;
